--- a/warbler-server/package.json
+++ b/warbler-server/package.json
@@ -17,7 +17,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.10",
-    "node":"12.11.1."
+    "node":"^12.11.1."
   },
   "devDependencies": {
     "locus": "^2.0.1"
